# cppmusic

./: # DAW PROJECT - HARDENED DEVELOPMENT RUL.md  .clang-format  .clang-tidy  .copilot-todo.md  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  PLAN.md  README.md  TODO1.md  analyze_disk_space.ps1  cppmusic.code-workspace  eq_test_simple  eq_test_simple.cpp  eslint.config.js  optimize_windows.ps1  run_app.ps1
src/: CMakeLists.txt
src/ai/: CMakeLists.txt  NeuralInferenceService.cpp  NeuralInferenceService.h  UltraNeuralInferenceEngine.cpp  UltraNeuralInferenceEngine.h
src/ai/arrangement/: ArrangementAnalyzer.cpp  ArrangementAnalyzer.hpp  CMakeLists.txt  SuggestionEngine.cpp  SuggestionEngine.hpp
src/ai/config/: AIConfig.cpp  AIConfig.h  CMakeLists.txt
src/ai/harmony/: CMakeLists.txt  HarmonicAnalyzer.cpp  HarmonicAnalyzer.hpp
src/ai/inference/: AIProcessor.cpp  AIProcessor.h  CMakeLists.txt  InferenceEngine.cpp  InferenceEngine.h
src/ai/models/: AIModel.cpp  AIModel.h  AIModelManager.cpp  AIModelManager.h  CMakeLists.txt  ChordAdvisor.cpp  ChordAdvisor.h  GrooveExtractor.cpp  GrooveExtractor.h  MelodyGenerator.cpp  MelodyGenerator.h
src/ai/tagging/: CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.hpp  TagClassifier.cpp  TagClassifier.hpp
src/audio/: AdvancedSynthesizer_rt.hpp  AnalogModeledEQ.h  AuroraReverb.cpp  AuroraReverb.h  CMakeLists.txt  MasterAudioProcessor.h  NebulaAuroraAudioProcessor.h  SpectralAnalysisEngine.h  SpectralAnalysisEngine_and_MasterAudioProcessor.cpp
src/audio/dsp/: CMakeLists.txt  Envelope.cpp  Envelope.h  LFO.cpp  LFO.h  Modulator.h  TrackStrip.cpp  TrackStrip.h
src/audio/effects/: CMakeLists.txt  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  NebulaDelay.hpp  Reverb.cpp  Reverb.h
src/audio/engine/: AudioGraph.cpp  AudioGraph.h  BlockSizeOptimizer.h  CMakeLists.txt  DawEngine.cpp  DawEngine.h  EngineContext.cpp  EngineContext.h  ModulationMatrix.cpp  ModulationMatrix.h  ParameterSmoother.h  PatternPlaybackEngine.cpp  PatternPlaybackEngine.h  PatternPlayer.cpp  PatternPlayer.h  Transport.cpp  Transport.h
src/audio/processors/: AudioProcessorBase.cpp  AudioProcessorBase.h  CMakeLists.txt
src/audio/synthesis/: CMakeLists.txt  Oscillator.cpp  Oscillator.h  Synthesizer.cpp  Synthesizer.h
src/core/: CMakeLists.txt  EngineContext.cpp  EngineContext.h  LockFreeRingBuffer.h  RTMemoryPool.cpp  RTMemoryPool.h  RealtimeMessageQueue.h  ServiceLocator.cpp  ServiceLocator.h  ServiceRegistry.h
src/core/performance/: AudioBenchmarks.cpp  AudioBenchmarks.h  BenchmarkSystem.cpp  BenchmarkSystem.h  ContinuousTesting.cpp  PerformanceMonitor.cpp  PerformanceMonitor.h
src/core/state/: ApplicationState.cpp  ApplicationState.h  CMakeLists.txt  ParameterManager.cpp  ParameterManager.h
src/core/testing/: MockImplementations.cpp  MockImplementations.h
src/core/utilities/: CMakeLists.txt  JobSystem.cpp  JobSystem.h  LockFreeQueue.h  LockFreeUtilities.cpp  LockFreeUtilities.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  PerformanceMonitor.h
src/engine/: AudioGraph.cpp  AudioGraph.hpp  CMakeLists.txt  Scheduler.cpp  Scheduler.hpp  Transport.cpp  Transport.hpp
src/engine/automation/: AutomationClip.cpp  AutomationClip.hpp  AutomationVersionStore.cpp  AutomationVersionStore.hpp  CMakeLists.txt
src/engine/concurrency/: AsyncDispatcher.cpp  AsyncDispatcher.hpp  CMakeLists.txt
src/engine/parameters/: CMakeLists.txt  ModMatrix.cpp  ModMatrix.hpp  ParamRegistry.cpp  ParamRegistry.hpp  ParamSignal.cpp  ParamSignal.hpp
src/engine/performance/: CMakeLists.txt  NodeQuality.hpp  PerformanceAdvisor.cpp  PerformanceAdvisor.hpp
src/integration/: CMakeLists.txt  EqualizerService.cpp  EqualizerService.h
src/main/: CMakeLists.txt  Info.plist  MainApplication.cpp  MainApplication.h  MainComponent.cpp  MainComponent.h  main.cpp
src/model/: CMakeLists.txt  DemoProjects.cpp  DemoProjects.hpp  Pattern.cpp  Pattern.hpp
src/model/assets/: AssetDB.cpp  AssetDB.hpp  CMakeLists.txt
src/platform/: CMakeLists.txt
src/platform/plugins/: CMakeLists.txt  PluginInspector.cpp  PluginInspector.hpp
src/platform/sandbox/: CMakeLists.txt  SandboxRunner.cpp  SandboxRunner.hpp
src/plugins/: CMakeLists.txt  PluginDatabase.cpp  PluginDatabase.h  PluginHost.cpp  PluginHost.h
src/project/: AutomationCurve.cpp  AutomationCurve.h  CMakeLists.txt  Clip.cpp  Clip.h  ClipContainer.cpp  ClipContainer.h  Pattern.cpp  Pattern.h  PatternJsonParser.cpp  PatternJsonParser.h  ProjectMigrator.cpp  ProjectMigrator.h  ProjectModel.cpp  ProjectModel.h  ProjectSerializer.cpp  ProjectSerializer.h  SelectionModel.cpp  SelectionModel.h  Track.cpp  Track.h  UndoManager.cpp  UndoManager.h
src/project/commands/: CreateClipCommand.cpp  CreateClipCommand.h  GroupClipsCommand.cpp  GroupClipsCommand.h  MoveClipCommand.cpp  MoveClipCommand.h  MoveContainerCommand.cpp  MoveContainerCommand.h  RemoveClipCommand.cpp  (+5 more)
src/services/: CMakeLists.txt
src/testing/: AudioTestFramework.h  MockComponents.h
src/ui/: AnalogEQEditor.cpp  AnalogEQEditor.h  AnalogEQEditorTest.cpp  App.cpp  App.h  AuroraReverbEditor.cpp  AuroraReverbEditor.h  CMakeLists.txt  ENHANCED_UI_USAGE.md  MainWindow.cpp  MainWindow.h  README.md
tests/: AnalogEQIntegrationTest.cpp  CMakeLists.txt  EQCompileTest.cpp  README.md  SynthesizerTests.cpp
tests/ai/: CMakeLists.txt  InferenceEngineTest.cpp  main.cpp
tests/audio/: CMakeLists.txt  CompressorTest.cpp  DrumMachineTest.cpp  ReverbTest.cpp  main.cpp
tests/core/: CMakeLists.txt  MathUtilsTest.cpp
tests/perf/: BenchGpuConvolution.cpp  BenchParamPropagation.cpp  BenchmarkUIPipeline.cpp  CMakeLists.txt
tests/project/: CMakeLists.txt  PatternJsonParserTest.cpp  PatternTest.cpp  ProjectModelTest.cpp  UndoManagerTest.cpp  main.cpp
tests/ui/: CMakeLists.txt  WaveformViewerTest.cpp
tests/unit/: CMakeLists.txt  TestArrangementMetrics.cpp  TestAutomationLayers.cpp  TestIntegrityHasher.cpp  TestParamGraph.cpp  TestPattern.cpp  TestPatternCRDT.cpp  TestPatternProbability.cpp  TestPerformanceAdvisor.cpp  TestScheduler.cpp  TestUndoDeterminism.cpp
(+295 files in other folders)
