# Source code modules

# Audio module
add_subdirectory(audio)

# UI module
add_subdirectory(ui)

# AI module
add_subdirectory(ai)

# Core module
add_subdirectory(core)

# Project module
add_subdirectory(project)

# Plugins module
add_subdirectory(plugins)

# Main application
add_subdirectory(main)

